# Video-Processing-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/engine/: Backend.h  Config.h  Engine.h  Error.h  Frame.h  Job.h  Pipeline.h  PixelFormat.h
include/io/: Decoder.h  Encoder.h
src/: Engine.cpp  metadata.rc
src/backend/cpu/: CpuBackend.cpp  CpuBackend.h
src/backend/cuda/: CudaBackend.h
src/io/: DecoderFFmpeg.cpp
src/utils/: Logger.h  ThreadPool.h  Timer.h
tests/: engine_tests.cpp
